--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wassup chat app</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
     <section class="chat__section">
         <div class="brand">
-            <img height="40" src="wassup.png" alt="">
+            <img height="40" src="/wassup.png" alt="">
             <h1>Wassup</h1>
         </div>
         <div class="message__area"></div>
